fix: update after CodeRabbit review